[package]
name = "super_txn"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "super_txn"

[features]
default = ["custom-heap"]
custom-heap = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
anchor-debug = []

[dependencies]
anchor-lang = "0.29.0"
default-env = "0.1.1"
solana-security-txt = "1.1.1"
